--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "llmgraph"
 version = "0.1.0"
+authors = ["bananabit-dev <bananabit@web.de>"]
+description = "This library provides a framework for building conversational AI applications with function calling capabilities using a graph-based architecture."
 edition = "2021"
 
 [dependencies]
